restore games link

--- a/views/home.jade
+++ b/views/home.jade
@@ -36,6 +36,7 @@ block content
         p: a(href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf") Resume
         p: a(href="http://mikesmullin.github.io/borg-docs/") Borg Project
         p: a(href="http://www.smullindesign.com/") Paid Services
+        p: a(href="http://games.mikesmullin.com/") Games
 
     aside
       .wrapper
