--- a/views/home.jade
+++ b/views/home.jade
@@ -34,8 +34,9 @@ block content
         p: a(href="https://medium.com/@mikesmullin/latest") Medium.com Blog
         p: a(href="http://linkedin.com/in/mikesmullin") LinkedIn.com Profile
         p: a(href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf") Resume
-        p: a(href="http://mikesmullin.github.io/borg-docs/") Borg Project
+        p: a(href="http://mikesmullin.github.io/borg-docs/") Borg DevOps
         p: a(href="http://www.smullindesign.com/") Paid Services
+        p: a(href="http://codepen.io/mikesmullin/") Codepen
         p: a(href="http://games.mikesmullin.com/") Games
 
     aside
