--- a/views/home.jade
+++ b/views/home.jade
@@ -25,20 +25,16 @@ block content
 
     article
       .wrapper
-        p "It's amazing!"
-        p "Incredibly useful."
-        p "Relevant."
-        p "Timely."
-        p "Better than the alternatives."
+        p Remember when it was cool to register your name as a .com tld?
+        p Try these, instead:
         br
-        p: a(href="https://medium.com/@mikesmullin/latest") Medium.com Blog
+        p: a(href="http://github.com/mikesmullin") Github Repos
+        p: a(href="http://mikesmullin.github.io/borg-docs/") Borg DevOps Tooling
+        p: a(href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
+        p: a(href="http://games.mikesmullin.com/") Indie Game in a Day Entries
+        p: a(href="http://codepen.io/mikesmullin/") Codepen Scribbles
         p: a(href="http://linkedin.com/in/mikesmullin") LinkedIn.com Profile
         p: a(href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf") Resume
-        p: a(href="http://mikesmullin.github.io/borg-docs/") Borg DevOps
-        p: a(href="http://www.smullindesign.com/") Paid Services
-        p: a(href="http://codepen.io/mikesmullin/") Codepen
-        p: a(href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
-        p: a(href="http://games.mikesmullin.com/") Games
 
     aside
       .wrapper
