--- a/views/home.jade
+++ b/views/home.jade
@@ -33,6 +33,8 @@ block content
         p: a(href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
         p: a(href="http://games.mikesmullin.com/") Indie Game in a Day Entries
         p: a(href="http://codepen.io/mikesmullin/") Codepen Scribbles
+        p: a(href="https://www.twitch.tv/mikesmullin") Twitch Streams
+        p: a(href="https://www.youtube.com/mikesmullin") YouTube Videos
         p: a(href="http://linkedin.com/in/mikesmullin") LinkedIn.com Profile
         p: a(href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf") Resume
 
