--- a/views/home.jade
+++ b/views/home.jade
@@ -2,6 +2,11 @@ extends layouts/global
 
 block head
   script.
+    // use https only
+    if (window.location.protocol === 'http:') {
+      window.location = 'https:'+ window.location.href.substr(5);
+    }
+  script.
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -10,7 +15,7 @@ block head
     ga('send', 'pageview');
 
 block head2
-  link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Acme|Nunito')
+  link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Acme|Nunito')
   link(rel='stylesheet' href='/stylesheets/monokai_sublime.css')
   script(src='/behaviors/highlight.pack.js')
   script.
@@ -28,14 +33,14 @@ block content
         p Remember when it was cool to register your name as a .com tld?
         p Try these, instead:
         br
-        p: a(href="http://github.com/mikesmullin") Github Repos
-        p: a(href="http://mikesmullin.github.io/borg-docs/") Borg DevOps Tooling
-        p: a(href="http://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
-        p: a(href="http://games.mikesmullin.com/") Indie Game in a Day Entries
-        p: a(href="http://codepen.io/mikesmullin/") Codepen Scribbles
-        p: a(href="https://www.twitch.tv/mikesmullin") Twitch Streams
-        p: a(href="https://www.youtube.com/mikesmullin") YouTube Videos
-        p: a(href="http://linkedin.com/in/mikesmullin") LinkedIn.com Profile
+        p: a(href="//github.com/mikesmullin") Github Repos
+        p: a(href="//mikesmullin.github.io/borg-docs/") Borg DevOps Tooling
+        p: a(href="//steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
+        p: a(href="//games.mikesmullin.com/") Indie Game in a Day Entries
+        p: a(href="//codepen.io/mikesmullin/") Codepen Scribbles
+        p: a(href="//www.twitch.tv/mikesmullin") Twitch Streams
+        p: a(href="//www.youtube.com/mikesmullin") YouTube Videos
+        p: a(href="//linkedin.com/in/mikesmullin") LinkedIn.com Profile
 
     aside
       .wrapper
