--- a/views/home.jade
+++ b/views/home.jade
@@ -10,12 +10,12 @@ block head
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-254701-1', 'auto');
     ga('send', 'pageview');
 
 block head2
-  link(rel='stylesheet' href='//fonts.googleapis.com/css?family=Acme|Nunito')
+  link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Acme|Nunito')
   link(rel='stylesheet' href='/stylesheets/monokai_sublime.css')
   script(src='/behaviors/highlight.pack.js')
   script.
@@ -33,14 +33,14 @@ block content
         p Remember when it was cool to register your name as a .com tld?
         p Try these, instead:
         br
-        p: a(href="//github.com/mikesmullin") Github Repos
-        p: a(href="//mikesmullin.github.io/borg-docs/") Borg DevOps Tooling
-        p: a(href="//steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
-        p: a(href="//games.mikesmullin.com/") Indie Game in a Day Entries
-        p: a(href="//codepen.io/mikesmullin/") Codepen Scribbles
-        p: a(href="//www.twitch.tv/mikesmullin") Twitch Streams
-        p: a(href="//www.youtube.com/mikesmullin") YouTube Videos
-        p: a(href="//linkedin.com/in/mikesmullin") LinkedIn.com Profile
+        p: a(href="https://github.com/mikesmullin") Github Repos
+        p: a(href="https://mikesmullin.github.io/borg-docs/") Borg DevOps Tooling
+        p: a(href="https://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&sort=score&browsefilter=myfiles&view=imagewall") Steam Workshop Mods
+        p: a(href="https://games.mikesmullin.com/") Indie Game in a Day Entries
+        p: a(href="https://codepen.io/mikesmullin/") Codepen Scribbles
+        p: a(href="https://www.twitch.tv/mikesmullin") Twitch Streams
+        p: a(href="https://www.youtube.com/mikesmullin") YouTube Videos
+        p: a(href="https://linkedin.com/in/mikesmullin") LinkedIn.com Profile
 
     aside
       .wrapper
